--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 	<title>Document</title>
 	<script src="./src/common.js"></script>
 	<script src="./src/create.js"></script>
-	<script type="module" src="./src/index.js"></script>
 	<link rel="stylesheet/less" type="text/css" href="./src/style.less" />
 	<script src="./assets/less/less.min.js"></script>
+	<script id="indexjs" type="module" src="./src/index.js"></script>
+	<script id="p5lib" type="module" src="./assets/p5/lib/p5.js"></script>
+	<script id="p5pi" type="module" src="./show/_p5i.js"></script>
+	<script id="p5sketch" type="module" src="./show/5.js"></script>
+</head>
 <body>
-	hi
 </body>
 </html>
