--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <script src="./src/create.js"></script>
     <link rel="stylesheet/less" type="text/css" href="./src/style.less" />
     <script src="./assets/less.min.js"></script>
+    <script id="p5lib" type="text/javascript" src="./assets/p5/lib/p5.js"></script>
+    <script id="p5pi" type="text/javascript" src="./show/_p5i.js"></script>
+    <script id="p5sketch" type="text/javascript" src="./show/5.js"></script>
     <script id="indexjs" type="module" src="./src/index.js"></script>
-    <script id="p5lib" type="module" src="./assets/p5/lib/p5.js"></script>
-    <script id="p5pi" type="module" src="./show/_p5i.js"></script>
-    <script id="p5sketch" type="module" src="./show/5.js"></script>
 </head>
 <body>
 </body>
