--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet/less" type="text/css" href="./src/style.less" />
-    <script type="text/javascript" src="./assets/less.min.js"></script>
+    <script type="text/javascript" src="./assets/less/less.min.js"></script>
     <script id="p5lib" type="text/javascript" src="./assets/p5/lib/p5.js"></script>
     <script id="p5pi" type="text/javascript" src="./show/_p5i.js"></script>
     <script id="p5sketch" type="text/javascript" src="./show/5.js"></script>
