--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <script type="text/javascript" src="./assets/less/less.min.js"></script>
     <!-- <script id="ml5lib" type="text/javascript" src="./assets/ml5/ml5.js"></script> -->
     <script id="p5lib" type="text/javascript" src="./assets/p5/lib/p5.js"></script>
+    <script id="p5lib" type="text/javascript" src="./assets/p5/lib/addons/p5.sound.js"></script>
     <!-- <script id="p5pi" type="text/javascript" src="./show/_p5i.js"></script> -->
     <!-- <script id="p5sketch" type="text/javascript" src="./show/myknn00.js"></script> -->
     <!-- <script id="p5sketch" type="text/javascript" src="./show/knn_01_featureExtractor_2022_07_03_15_47_45.js"></script> -->
-    <script id="indexjs" type="module" src="./src/index.js"></script>
+    <!-- <script id="indexjs" type="module" src="./src/index.js"></script> -->
+    <script id="indexjs" src="./show/0.js"></script>
 </head>
 <body>
 </body>
