--- a/index1.html
+++ b/index1.html
@@ -13,7 +13,10 @@
     <!-- <script id="p5pi" type="text/javascript" src="./show/_p5i.js"></script> -->
     <!-- <script id="p5sketch" type="text/javascript" src="./show/myknn00.js"></script> -->
     <!-- <script id="p5sketch" type="text/javascript" src="./show/knn_01_featureExtractor_2022_07_03_15_47_45.js"></script> -->
-    <script id="indexjs" type="module" src="./src/index.js"></script>
+    <!-- <script id="indexjs" type="module" src="./src/index.js"></script> -->
+    <script id="lib_es" src="./show/lib_es.js"></script>
+    <script id="lib_p5" src="./show/lib_p5.js"></script>
+    <script id="lib_p5_color" src="./show/lib_p5_color.js"></script>
     <script id="indexjs" src="./show/0.js"></script>
 </head>
 <body>
