--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <script id="p5lib" type="text/javascript" src="./assets/p5/lib/addons/p5.sound.js"></script>
         <!-- <script id="p5pi" type="text/javascript" src="./show/_p5i.js"></script> -->
         <!-- <script id="indexjs" type="module" src="./src/index.js"></script> -->
-        <script id="lib_es" src="./show/lib_es.js"></script>
+        <!-- <script id="lib_es" src="./show/lib_es.js"></script>
         <script id="lib_p5" src="./show/lib_p5.js"></script>
-        <script id="lib_p5_color" src="./show/lib_p5_color.js"></script>
+        <script id="lib_p5_color" src="./show/lib_p5_color.js"></script> -->
         <script id="indexjs" src="./show/0.js"></script>
     </head>
     <body>
