--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,9 @@
         <script id="p5lib" type="text/javascript" src="../assets/p5/lib/addons/p5.sound.js"></script>
         <!-- <script id="p5pi" type="text/javascript" src="../show/_p5i.js"></script> -->
         <!-- <script id="indexjs" type="module" src="./index.js"></script> -->
-        <!-- <script id="lib_es" src="../show/lib_es.js"></script>
-        <script id="lib_p5" src="../show/lib_p5.js"></script> -->
-        <!-- <script id="lib_p5_color" src="../show/lib_p5_color.js"></script> -->
+        <script id="lib_es" src="../p5sketch/lib_es.js"></script>
+        <script id="lib_p5" src="../p5sketch/lib_p5.js"></script>
+        <script id="lib_p5_color" src="../p5sketch/lib_p5_color.js"></script>
     </head>
     <body>
     </body>
